// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings menu should be visible when menu button clicked 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Settings"
      class="toggle"
      role="button"
      tabindex="0"
      title="Settings"
      type="button"
    />
    <div
      class="dropdown"
      role="menu"
    >
      <h4
        class="heading"
      >
        Settings
      </h4>
      <ul
        class="list"
      >
        <li
          class="listItem"
        >
          <a
            href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/remove"
            role="menuitem"
            tabindex="-1"
          >
            Forget current account
          </a>
        </li>
        <li
          class="listItem"
        >
          <a
            href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/reset"
            role="menuitem"
            tabindex="-1"
          >
            Reset password for current account
          </a>
        </li>
        <li
          class="disabled"
        >
          <button
            class="listButton"
            disabled=""
            type="button"
          >
            Require password for future transactions
          </button>
        </li>
        <li
          class="listItem"
        >
          <a
            role="menuitem"
            tabindex="-1"
          >
            Terms & Conditions
          </a>
        </li>
        <li
          class="listItem"
        >
          <a
            href="/access"
            role="menuitem"
            tabindex="-1"
          >
            Toggle website access
          </a>
        </li>
        <li
          class="listItem"
        >
          <a
            role="menuitem"
            tabindex="-1"
          >
            Version 2021.6.17
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Settings should render 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Settings"
      class="toggle"
      role="button"
      tabindex="0"
      title="Settings"
      type="button"
    />
  </div>
</div>
`;

exports[`Settings should render the endpoint item in the internal build 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Settings"
      class="toggle"
      role="button"
      tabindex="0"
      title="Settings"
      type="button"
    />
    <div
      class="dropdown"
      role="menu"
    >
      <h4
        class="heading"
      >
        Settings
      </h4>
      <ul
        class="list"
      >
        <li
          class="listItem"
        >
          <a
            role="menuitem"
            tabindex="-1"
          >
            Terms & Conditions
          </a>
        </li>
        <li
          class="listItem"
        >
          <a
            href="/access"
            role="menuitem"
            tabindex="-1"
          >
            Toggle website access
          </a>
        </li>
        <li
          class="listItem"
        >
          <a
            href="/settings"
            role="menuitem"
            tabindex="-1"
          >
            Custom endpoint
          </a>
        </li>
        <li
          class="listItem"
        >
          <a
            role="menuitem"
            tabindex="-1"
          >
            Version 2021.6.17
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
